--- a/app/dts/behaviors.dtsi
+++ b/app/dts/behaviors.dtsi
@@ -7,3 +7,4 @@
 #include <behaviors/reset.dtsi>
 #include <behaviors/sensor_rotate_key_press.dtsi>
 #include <behaviors/rgb_underglow.dtsi>
+#include <behaviors/bluetooth.dtsi>
