feat(HID): Increase default USB HID Device Interrupt Endpoint size to 64
Prerequisite of supporting larger NKRO keyboard reports.

Keys standardization requires 34 bytes per keyboard report for full NKRO.  However, the smallest end point size that works seems to be: HID_INTERRUPT_EP_MPS=64

Part of #234.  Prerequisite of #21.

--- a/app/Kconfig
+++ b/app/Kconfig
@@ -43,6 +43,9 @@ if ZMK_USB
 config USB_NUMOF_EP_WRITE_RETRIES
 	default 10
 
+config HID_INTERRUPT_EP_MPS
+	default 64
+
 endif
 
 menuconfig ZMK_BLE
