feat(HID): Increase default USB HID Device Interrupt Endpoint size to 64
- Part of #234.
- Prerequisite of supporting larger NKRO keyboard reports.
- #21 keys.h standardization requires 34 bytes per keyboard report for full NKRO.

--- a/app/Kconfig
+++ b/app/Kconfig
@@ -30,6 +30,9 @@ config ZMK_USB_INIT_PRIORITY
 config USB_NUMOF_EP_WRITE_RETRIES
 	default 10
 
+config HID_INTERRUPT_EP_MPS
+	default 64
+
 endif
 
 menuconfig ZMK_BLE
