--- a/app/boards/shields/qaz/qaz.conf
+++ b/app/boards/shields/qaz/qaz.conf
@@ -1,4 +1,6 @@
 
-CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
 # Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_STRIP=n
+CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
