--- a/app/boards/shields/qaz/qaz.conf
+++ b/app/boards/shields/qaz/qaz.conf
@@ -1,2 +1,6 @@
 CONFIG_ZMK_SLEEP=y
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
+
+# Uncomment the following lines to enable the Corne RGB Underglow
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
