--- a/app/boards/shields/qaz/qaz.conf
+++ b/app/boards/shields/qaz/qaz.conf
@@ -4,3 +4,5 @@ CONFIG_ZMK_SLEEP=y
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
