ble chiffre updates

--- a/app/boards/arm/ble_chiffre/ble_chiffre.dts
+++ b/app/boards/arm/ble_chiffre/ble_chiffre.dts
@@ -8,8 +8,8 @@
 #include <nordic/nrf52840_qiaa.dtsi>
 
 / {
-	model = "nice!nano";
-	compatible = "nice,nano";
+	model = "BLe Chiffre";
+	compatible = "ble,chiffre";
 
 	chosen {
 		zephyr,code-partition = &code_partition;
