--- a/app/boards/arm/ble_chiffre/ble_chiffre.dts
+++ b/app/boards/arm/ble_chiffre/ble_chiffre.dts
@@ -9,7 +9,7 @@
 
 / {
 	model = "BLe Chiffre";
-	compatible = "ble,chiffre";
+	compatible = "ble,chiffre", "nrf52840";
 
 	chosen {
 		zephyr,code-partition = &code_partition;
@@ -54,16 +54,16 @@
 	scl-pin = <19>;
 };
 
-/*&uart0 {
- *	compatible = "nordic,nrf-uarte";
- *	status = "okay";
- *	current-speed = <115200>;
- *	tx-pin = <19>;
- *	rx-pin = <21>;
- *	rts-pin = <23>;
- *	cts-pin = <25>;
- *};
- */
+&uart0 {
+ 	compatible = "nordic,nrf-uarte";
+ 	status = "okay";
+ 	current-speed = <115200>;
+ 	tx-pin = <19>;
+ 	rx-pin = <21>;
+ 	rts-pin = <23>;
+	cts-pin = <25>;
+ };
+ 
 
 &usbd {
 	status = "okay";
