--- a/app/boards/arm/ble_chiffre/ble_chiffre.dts
+++ b/app/boards/arm/ble_chiffre/ble_chiffre.dts
@@ -97,7 +97,7 @@
 
 &i2c0 {
 	status = "okay";
-	compatible = "nordic,nrf-twim";
+	compatible = "nordic,nrf-twi";
 	sda-pin = <21>;
 	scl-pin = <19>;
 
