--- a/app/boards/arm/ble_chiffre/ble_chiffre_defconfig
+++ b/app/boards/arm/ble_chiffre/ble_chiffre_defconfig
@@ -18,3 +18,8 @@ CONFIG_SETTINGS_NVS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
+
+# Uncomment the following line to enable the OLED Display
+CONFIG_ZMK_DISPLAY=y
+
+CONFIG_ZMK_SLEEP=y
