update ble chiffre config

--- a/app/boards/arm/ble_chiffre/ble_chiffre.dts
+++ b/app/boards/arm/ble_chiffre/ble_chiffre.dts
@@ -67,7 +67,7 @@
 	ext-power {
 		compatible = "zmk,ext-power-generic";
 		label = "EXT_POWER";
-		control-gpios = <&gpio0 7 GPIO_ACTIVE_HIGH>;
+		control-gpios = <&gpio0 7 GPIO_ACTIVE_LOW>;
 	};
 
 	vbatt {
